--- a/.github/chainguard/release.sts.yaml
+++ b/.github/chainguard/release.sts.yaml
@@ -1,7 +1,7 @@
 issuer: https://token.actions.githubusercontent.com
 subject_pattern: repo:shopware/dashy-cli:ref:refs/tags/v[0-9]+\.[0-9]+\.[0-9]+(?:-(beta|alpha|dev|rc\.[0-9]+))?
 claim_pattern:
-  job_workflow_ref: shopware/dashy-cli/.github/workflows/release.yml@refs/tags/v[0-9]+\.[0-9]+\.[0-9]+(?:-(beta|alpha|dev|rc\.[0-9]+))?
+  job_workflow_ref: shopware/dashy-cli/.github/workflows/release.yaml@refs/tags/v[0-9]+\.[0-9]+\.[0-9]+(?:-(beta|alpha|dev|rc\.[0-9]+))?
 
 permissions:
   contents: write
